# boardgames

./: .gitignore  README.MD  docker-compose.yml
back-end/: .gitignore  Dockerfile  pyproject.toml
back-end/app/: crud.py  database.py  main.py  models.py
docs/: design.pptx
front-end/: .dockerignore  Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
front-end/e2e/src/: app.e2e-spec.ts
front-end/src/: index.html  styles.css
front-end/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  games.service.ts
front-end/src/app/game/: game.component.html  game.component.ts
front-end/src/app/games/: games.component.html  games.component.ts
front-end/src/app/home/: home.component.html
front-end/src/app/models/: game.ts  score.ts
front-end/src/app/new-game/: new-game.component.css  new-game.component.html  new-game.component.ts
front-end/src/app/scores/: scores.component.html  scores.component.ts
front-end/src/app/services/: games.service.spec.ts  games.service.ts  scores.service.ts
front-end/src/environments/: environment.prod.ts  environment.ts
